fix(gallery): adjust slider pagination spacing
- Remove fixed aspect ratio from slider container
- Add margin to swiper-wrapper instead of padding to container
- Fix pagination alignment with proper spacing

--- a/src/components/home/v2/ProductDisplay/ProductGallery.module.scss
+++ b/src/components/home/v2/ProductDisplay/ProductGallery.module.scss
@@ -12,11 +12,12 @@
   --swiper-pagination-bullet-inactive-opacity: 1;
   --swiper-pagination-color: #e9e9e9;
   width: 100%;
-  aspect-ratio: 1;
-  padding-bottom: 30px !important;
-  box-sizing: content-box;
 
   :global {
+    .swiper-wrapper {
+      margin-bottom: 30px;
+    }
+
     .swiper-pagination-bullet {
       transition: $transition;
     }
